# m365-documenter-agent

./: .gitignore  LICENSE  QUICKSTART.md  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setupEnv.sh
code/: __init__.py  app.py
code/api/: app.py
code/services/api/: Dockerfile  app.py
code/services/browser/: __init__.py  app.py
code/shared/models/: __init__.py
code/shared/utils/: __init__.py
code/utils/: test.py
docs/: ARCHITECTURE.md
infra/: main.bicep
infra/ai/: cognitive-services.bicep  model.bicep
infra/security/: role-assignment.bicep
src/: test.ipynb
src/services/api/: Dockerfile  __init__.py  app.py
src/services/devui/: app.py
src/shared/: __init__.py
src/shared/agents/: graph-documenter.py  graph_documenter.md  graph_documenter.py
src/shared/helpers/: azure-content-safety.py
src/shared/helpers/agents/: agent_client.py
src/shared/models/: agent_instruction.py  chat_model.py  chatmodel.py  configuration.py  default_config.json  responses.py
src/shared/tools/: graph.py
