[project]
name = "m365-documenter-agent"
version = "0.1.0"
description = "This is an agent that will document a Microsoft 365 Tenancy in As Built As Configured documentation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.30.0",
    "agent-framework(>=1.0.0b251007,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Pylance/Pyright configuration
[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
